# scrapers

./: .gitignore  pyproject.toml
scrapers/: opendata-rijksbegroting.py  springer-books.py  ug-tabs.py
