[tool.poetry]
name = "scrapers"
version = "0.1.0"
description = ""
authors = ["proprefenetre <proprefenetre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
lxml = "^4.5.0"
requests = "^2.23.0"
plac = "^1.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
